Update stylesheet and script paths in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>GoCatwalk Login</title>
-  <link rel="stylesheet" href="goc4twalk/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Login Card -->
@@ -43,6 +43,6 @@
     </div>
   </div>
 
-  <script src="goc4twalk/main.js"></script>
+  <script src="/main.js"></script>
 </body>
 </html>
