Update stylesheet and script paths in lobby.html

--- a/lobby.html
+++ b/lobby.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lobby - GoCatwalk</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="login-container fade-in">
@@ -23,6 +23,6 @@
     <button id="startGameBtn">Start Game</button>
   </div>
 
-  <script src="js/lobby.js"></script>
+  <script src="lobby.js"></script>
 </body>
 </html>
