--- a/lobby.html
+++ b/lobby.html
@@ -2,27 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Lobby - GoCatwalk</title>
+  <title>GoCatwalk Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="login-container fade-in">
-    <h1>Lobby</h1>
-    <p>Waiting for players...</p>
+    <h1>GoCatwalk</h1>
+    <p class="subtitle">Enter your name and GoSuperModel ID</p>
 
-    <!-- Players list -->
-    <ul id="playerList">
-      <!-- Player names will appear here -->
-    </ul>
+    <form id="loginForm">
+      <label for="username">Name:</label>
+      <input id="username" placeholder="Enter your name" />
 
-    <!-- Add player manually (for demo/testing) -->
-    <input type="text" id="newPlayer" placeholder="Enter player name" />
-    <button id="addPlayerBtn">Add Player</button>
+      <label for="modelID">GoSuperModel ID:</label>
+      <input id="modelID" placeholder="Enter your GoSuperModel ID" />
 
-    <!-- Start game button -->
-    <button id="startGameBtn">Start Game</button>
+      <button type="button" id="showBtn">Is this you?</button>
+    </form>
+
+    <div class="preview hidden" id="confirmBox">
+      <img id="previewImg" class="hidden" src="" alt="Model Preview">
+      <p>Is this you?</p>
+      <button id="yesBtn">Yes</button>
+      <button id="noBtn">No</button>
+    </div>
   </div>
 
-  <script src="lobby.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
