--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <label for="modelID">GoSupermodel ID:</label>
       <input id="modelID" placeholder="Enter your GoSuperModel ID" />
 
-      <button type="button" id="showBtn">Is this you?</button>
+      <button type="button" id="showBtn">Confirm</button>
     </form>
 
     <div class="preview hidden" id="confirmBox">
