--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <label for="modelID">GoSupermodel ID:</label>
       <input id="modelID" placeholder="Enter your GoSuperModel ID" />
 
-      <button type="button" id="showBtn">Confirm</button>
+      <!-- Updated button text -->
+      <button type="button" id="showBtn">Check my model!</button>
     </form>
 
     <div class="preview hidden" id="confirmBox">
