--- a/lobby.html
+++ b/lobby.html
@@ -20,6 +20,9 @@
       <button id="hostBtn">Host Game</button>
       <button id="joinBtn">Join Game</button>
     </div>
+
+    <!-- List of players in the lobby -->
+    <ul id="playerList"></ul>
   </div>
 
   <script src="lobby.js"></script>
