--- a/lobby.html
+++ b/lobby.html
@@ -6,22 +6,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="login-container fade-in">
-    <h1>GoCatwalk Lobby</h1>
-    
+  <div class="lobby-container fade-in">
+    <h1>Lobby</h1>
+
     <!-- User info -->
     <div class="user-info">
       <img id="userAvatar" src="" alt="User Avatar">
       <p id="usernameDisplay"></p>
     </div>
 
-    <!-- Host/Join buttons -->
+    <!-- Lobby buttons -->
     <div class="lobby-buttons">
       <button id="hostBtn">Host Game</button>
       <button id="joinBtn">Join Game</button>
     </div>
 
-    <!-- List of players in the lobby -->
     <ul id="playerList"></ul>
   </div>
 
