--- a/lobby.html
+++ b/lobby.html
@@ -7,41 +7,41 @@
 </head>
 <body>
   <div class="lobby-container fade-in">
-    <h1>Lobby</h1>
+    <h1>GoCatwalk Lobby</h1>
 
-    <!-- Player Info -->
+    <!-- Player avatar and name -->
     <div class="player-info">
       <img id="playerAvatar" class="player-avatar" src="" alt="Your Avatar">
       <p id="playerName"></p>
     </div>
 
-    <!-- Lobby Options -->
+    <!-- Lobby buttons -->
     <div class="lobby-buttons">
       <button id="hostBtn">Host Game</button>
       <button id="joinBtn">Join Game</button>
     </div>
 
-    <!-- Host Menu -->
+    <!-- Host menu -->
     <div id="hostMenu" class="hidden">
-      <h2>Host Options</h2>
-      <label for="roomNameInput">Room Name:</label>
-      <input id="roomNameInput" placeholder="Enter room name">
+      <label for="roomName">Room Name:</label>
+      <input type="text" id="roomName" placeholder="Enter room name">
 
-      <label for="themeInput">Theme:</label>
-      <input id="themeInput" placeholder="Enter round theme">
+      <label for="backgroundUrl">Runway Background URL:</label>
+      <input type="text" id="backgroundUrl" placeholder="Enter image URL">
 
-      <label for="backgroundInput">Runway Background URL:</label>
-      <input id="backgroundInput" placeholder="Optional image URL">
+      <label for="theme">Round Theme:</label>
+      <input type="text" id="theme" placeholder="Enter round theme">
+
+      <label for="timer">Timer (minutes):</label>
+      <input type="number" id="timer" min="5" max="30" value="10">
 
       <button id="startRoundBtn">Start Round</button>
-      <button id="kickBtn">Kick Inactive Player</button>
     </div>
 
-    <!-- Join Menu -->
+    <!-- Join menu -->
     <div id="joinMenu" class="hidden">
-      <h2>Join a Game</h2>
-      <p>Available rooms will appear here (placeholder)</p>
-      <!-- Could populate dynamically later -->
+      <p>Available Rooms:</p>
+      <ul id="availableRooms"></ul>
     </div>
   </div>
 
