--- a/lobby.html
+++ b/lobby.html
@@ -23,24 +23,25 @@
 
     <!-- Host menu -->
     <div id="hostMenu" class="hidden">
-      <label for="roomName">Room Name:</label>
-      <input type="text" id="roomName" placeholder="Enter room name">
+      <h2>Room Settings</h2>
 
-      <label for="backgroundUrl">Runway Background URL:</label>
-      <input type="text" id="backgroundUrl" placeholder="Enter image URL">
+      <div id="playerListHost" class="player-list-host"></div>
 
       <label for="theme">Round Theme:</label>
       <input type="text" id="theme" placeholder="Enter round theme">
 
-      <label for="timer">Timer (minutes):</label>
+      <label for="backgroundUrl">Optional Background Image URL:</label>
+      <input type="text" id="backgroundUrl" placeholder="Enter image URL">
+
+      <label for="timer">Round Duration (minutes):</label>
       <input type="number" id="timer" min="5" max="30" value="10">
 
-      <button id="startRoundBtn">Start Round</button>
+      <button id="startGameBtn">Start Game</button>
     </div>
 
     <!-- Join menu -->
     <div id="joinMenu" class="hidden">
-      <p>Available Rooms:</p>
+      <h2>Available Rooms</h2>
       <ul id="availableRooms"></ul>
     </div>
   </div>
