--- a/lobby.html
+++ b/lobby.html
@@ -21,16 +21,15 @@
       <button id="joinBtn">Join Game</button>
     </div>
 
-    <!-- Host Room View -->
+    <!-- Host View -->
     <div id="hostRoom" class="hidden">
-      <h2 id="roomTitle">Your Room</h2>
-
+      <h2>Your Room</h2>
       <div id="playerListHost" class="player-list-host"></div>
 
       <button id="editRoundBtn">Edit Round Settings</button>
     </div>
 
-    <!-- Round Settings Panel -->
+    <!-- Round Settings -->
     <div id="roundSettings" class="hidden">
       <h2>Round Settings</h2>
 
