--- a/lobby.html
+++ b/lobby.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>GoCatwalk Lobby</title>
-  <link rel="stylesheet" href="lobby.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="lobbyContainer">
