--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
       <button id="noBtn">No</button>
     </div>
   </div>
+<div class="background-selector hidden" id="backgroundSelector">
+  <h3>Choose your Catwalk Background</h3>
+  <div class="background-options" id="backgroundOptions"></div>
+</div>
+
+<div class="avatar-preview hidden" id="avatarPreview">
+  <div class="avatar-container">
+    <img id="bgImage" alt="Background" class="bg-layer">
+    <img id="avatarImg" alt="Your Avatar" class="avatar-layer">
+  </div>
+</div>
 
   <script src="main.js"></script>
 </body>
