--- a/index.html
+++ b/index.html
@@ -33,3 +33,21 @@
 
 </body>
 </html>
+<!-- Floating Background Widget -->
+<div id="backgroundWidget" class="draggable-panel">
+  <div id="dragHandle" class="drag-handle">⋮ Drag me</div>
+  
+  <h3>Choose a Background</h3>
+  <div class="bg-options">
+    <img src="https://gosupermodel.com/files/catwalk%20by%20falco%20avatar%20bg" alt="BG1">
+    <img src="https://gosupermodel.com/files/lny_avatar_bg" alt="BG2">
+    <img src="https://gosupermodel.com/files/stage%20by%20falco%20avatar%20bg" alt="BG3">
+    <img src="https://gosupermodel.com/files/spt%20avatar%20bg_dark" alt="BG4">
+    <img src="https://gosupermodel.com/files/dark%20cats%20by%20chizumi%20avatar%20bg" alt="BG5">
+    <img src="https://gosupermodel.com/files/flowers%20by%20chizumi%20avatar%20bg" alt="BG6">
+    <img src="https://gosupermodel.com/files/darkmode%20by%20chizumi" alt="BG7">
+    <img src="https://gosupermodel.com/files/bg%20avatar%20spt%201" alt="BG8">
+    <img src="https://gosupermodel.com/files/avatar_bg_bts24" alt="BG9">
+    <img src="https://gosupermodel.com/files/gochella%20by%20falco%20avatar%20bg" alt="BG10">
+  </div>
+</div>
